add css spinner loader

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="page-header">
-                <h1>Monty Hall Simulator</h1>
+                <h1>Monty Hall Problem Simulator</h1>
             </div>
         </div>
 
@@ -16,7 +16,7 @@
                        id="attempts"
                        class="form-control mb-2 mr-sm-2 mb-sm-0"
                        placeholder="Attempts">
-                <button class="btn btn-primary">Submit</button>
+                <button class="btn btn-primary" id="submitBtn">Submit</button>
             </form>
         </div>
 
