--- a/app/Resources/views/default/_simulation_results.html.twig
+++ b/app/Resources/views/default/_simulation_results.html.twig
@@ -1,1 +1,25 @@
-results here
+<div>
+    <table class="table table-bordered">
+        <thead>
+        <tr>
+            <th></th>
+            <th>Change</th>
+            <th>No Change</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr>
+            <th>Wins</th>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th>Percentage</th>
+            <td></td>
+            <td></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
