--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,6 +5,8 @@
         <div class="row my-2">
             <div class="col page-header">
                 <h1>Monty Hall Problem Simulator</h1>
+                <p class="lead">Suppose you're on a game show. There are 3 doors, behind one of the doors there's a car, the others, goats. You're asked to pick a door. Then the host, who knows what's behind all the doors, opens another door which has a goat behind it. He then asks if you want to switch to the other door or stick with the first door. Is it in your interest to switch?</p>
+                <p class="lead">Simulate this riddle and see your chances of winning!</p>
             </div>
         </div>
 
