add js validation

--- a/app/Resources/views/default/_simulation_results.html.twig
+++ b/app/Resources/views/default/_simulation_results.html.twig
@@ -11,14 +11,14 @@
         <tbody>
         <tr>
             <th class="table-primary">Wins</th>
-            <td class="table-info">{{ wins }}</td>
-            <td class="table-info">{{ losses }}</td>
+            <td class="table-warning">{{ wins }}</td>
+            <td class="table-warning">{{ losses }}</td>
         </tr>
 
         <tr>
             <th class="table-primary">Percentage</th>
-            <td class="table-info">{{ winPercentage | percentage }}</td>
-            <td class="table-info">{{ lossesPercentage | percentage }}</td>
+            <td class="table-warning">{{ winPercentage | percentage }}</td>
+            <td class="table-warning">{{ lossesPercentage | percentage }}</td>
         </tr>
         </tbody>
     </table>
