disable submit btn until input is valid

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,8 +5,7 @@
         <div class="row my-2">
             <div class="col page-header">
                 <h1>Monty Hall Problem Simulator</h1>
-                <p class="lead">Suppose you're on a game show, and you're given the choice of three doors: Behind one door is a car; behind the others, goats. You pick a door, say No. 1, and the host, who knows what's behind the doors, opens another door, say No. 3, which has a goat. He then says to you, "Do you want to pick door No. 2?" Is it to your advantage to switch your choice?
-                </p>
+                <p class="lead">Suppose you're on a game show, and you're given the choice of three doors: Behind one door is a car; behind the others, goats. You pick a door, say No. 1, and the host, who knows what's behind the doors, opens another door, say No. 3, which has a goat. He then says to you, "Do you want to pick door No. 2?" Is it to your advantage to switch your choice? </p>
                 <p class="lead">Simulate this riddle and see your chances of winning!</p>
             </div>
         </div>
@@ -20,7 +19,7 @@
                            id="attempts"
                            class="form-control mb-2 mr-sm-2 mb-sm-0"
                            placeholder="Attempts">
-                    <button class="btn btn-primary" id="submitBtn">Submit</button>
+                    <button class="btn btn-primary" id="submitBtn" disabled>Submit</button>
                 </form>
             </div>
         </div>
